# medical-product-research-agent

./: .env.example  .gitignore  AGENTS.md  DBS脑电采集电极要求调研_加强版.md  HANDOFF.md  LOG.md  README.md  SCS刺激参数调研.md  pyproject.toml  医疗产品调研Agent开发周期计划表.md
.codex/: README.md  actions.ps1  setup.ps1
examples/: check_llm_config.py  ingest_local_files.py  run_mock_workflow.py  run_source_workflow.py  search_sources.py
scripts/: activate-dev.ps1
tests/: mvp_flow_fixtures.py  pinned_transport_stream_fixtures.py  test_check_llm_config_cli.py  test_claim_verifier.py  test_connector_error_handling.py  test_connector_json_resilience.py  test_connectors_sources.py  test_crossref_resilience.py  test_evidence.py  test_evidence_dedup.py  test_evidence_gap_followup.py  test_follow_up_preferred_routes.py  test_follow_up_source_triage.py  test_follow_up_state_integrity.py  test_free_access_contracts.py  test_free_access_verifier.py  test_http_client_ownership.py  test_llm_client.py  test_llm_config_doctor.py  test_llm_evidence_extraction.py  test_llm_evidence_private_boundary.py  test_llm_report_writer.py  test_llm_source_strategy.py  test_llm_source_triage.py  test_local_file_ingestion.py  test_mvp_flow_expectations.py  test_mvp_flow_outputs.py  test_open_literature_connectors.py  test_parsers_documents.py  test_pdf_renderer.py  test_public_source_connectors.py  test_public_url_transport.py  test_query_expansion.py  test_report_boundary_hardening.py  test_report_citation_eligibility.py  test_report_grounding_audit.py  test_report_outline_planner.py  test_report_quality_evaluator.py  (+17 more)
(+81 files in other folders)
