[build-system]
requires = ["hatchling>=1.25", "editables>=0.5"]
build-backend = "hatchling.build"

[project]
name = "medical-research-agent"
version = "0.1.0"
description = "Local-first research workflow foundation for medical product investigation reports."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "httpx>=0.28,<1",
    "Jinja2>=3.1,<4",
    "langgraph>=0.2,<1",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.2,<3",
    "pypdf>=5.0,<7",
    "reportlab>=4.2,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/medical_research_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
